<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quake Report</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>
    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>


    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!--MINIMUM MAGNITUDE-->
    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!--ORDER-BY-->
    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- SET DATE CHECKBOX-->
    <!-- String for set date checkbox prefernces -->
    <string name="settings_checkbox_label">Set Date</string>
    <string name="settings_checkbox_key" translatable="false">set_date</string>
    <string name="settings_checkbox_default" translatable="false">false</string>

    <!--START TIME-->
    <!--String for satrttime prefernces-->
    <string name="settings_starttime_label" translatable="false">Start Time</string>
    <string name="settings_starttime_key" translatable="false">start_time</string>
    <string name="settings_starttime_dafault" translatable="false">1964-01-01</string>

    <!--END TIME-->
    <!--String for endtime prefernces-->
    <string name="settings_endtime_label" translatable="false">End Time</string>
    <string name="settings_endtime_key" translatable="false">end_time</string>
    <string name="settings_endtime_dafault" translatable="false">1964-10-01</string>

</resources>
